sites/navy/clusters/dal-navy-core-1/wave-5/overlays/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: n8n
    app.kubernetes.io/name: n8n
  name: n8n
spec:
  ports:
    - port: 5678
      protocol: TCP
      targetPort: 5678
  selector:
    app.kubernetes.io/instance: n8n
    app.kubernetes.io/name: n8n
  type: ClusterIP
